# staffAuth

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: FindJSON-C.cmake  FindLibconfig.cmake  FindPAM.cmake  UseLATEX.cmake
conf/: CMakeLists.txt  pam.conf  sudoers.conf
debian/: changelog  control  copyright  libmauth-dev.install  libmauth1.install  libmauth1.lintian-overrides  libmauth1.symbols  libpam-mauth.install  libpam-mauth.postinst  libpam-mauth.prerm  mauth-openssh.install  mauth-openssh.postinst  mauth-openssh.prerm  rules
doc/: CMakeLists.txt  doxygen.conf.in
doc/paper/: CMakeLists.txt  abstract.tex  api.tex  concept.tex  credentials.tex  dns_config.tex  idea.tex  license.tex  paper.tex  problem.tex  requirements.tex
doc/paper/api/: login_credentials.tex  ssh_keys.tex  ssh_keys_notify.tex  verify_otp.tex
src/: CMakeLists.txt
src/keys/: CMakeLists.txt  cmake-config.h.in  config.h  config_cmdargs.c  config_conffile.c  keys.c  keys.h  memstream.c  memstream.h  request.c
src/libmaintain/: CMakeLists.txt  cleanup.c  init.c
src/libmaintain/header/: maintain.h
src/libmauth/: CMakeLists.txt  api_request.c  api_url.c  cleanup.c  cmake-config.h.in  config.h.in  destroy.c  get_keys.c  init.c  is_staff.c  keylist_add.c  keylist_free.c  mauth-internal.h  mauth.h  memstream.c  set_login.c  valid_pwnam.c  valid_pwuid.c  verify_otp.c
src/libmauth/api/: CMakeLists.txt  find_server.c  gen_string.c  lookup.c  lookup_key.c
src/libmauth/header/: mauth.h
src/libmauth/valid/: CMakeLists.txt  valid_grgid.c  valid_grnam.c  valid_pwnam.c  valid_pwuid.c
src/libnss_mauth/: CMakeLists.txt  nss_mauth.h  passwd.c
src/pam/: CMakeLists.txt  mauth_pam.c  pam_sm_authenticate.c  pam_sm_setcred.c
src/server/: server.php
tests/: CMakeLists.txt
tests/api-server/: api.php  server.php
tests/mauth/: CMakeLists.txt  is_staff_username.c  valid_grgid.c  valid_grnam.c  valid_pwnam.c  valid_pwuid.c
tests/nss_mauth/: CMakeLists.txt  getpwnam.c  getpwuid.c
